@@ -8,7 +8,7 @@ Prado Functional Test Suites
 <h1>Prado Functional Test Suites</h1>
 <ul>
   <li><a href="quickstart.php">Tests of QuickStart Tutorial Demo</a></li>
-  <li><a href="validators.php">Tests of Validators</a></li>
+  <li><a href="validators.php">Tests of Validators</a> (<a href="validators/index.php">list of test samples</a>)</li>
   <li><a href="active.php">Tests of Active Controls</a> (<a href="active-controls/index.php">list of test samples</a>) </li>
   <li><a href="tickets.php">Tests of Trac Tickets</a> (<a href="tickets/index.php">list of Test Samples</a>)</li>
   <li><a href="features.php">Tests of New Features</a> (<a href="features/index.php">list of new features</a>)</li>
