@@ -13,6 +13,7 @@ BUG: SelectedIndices not return expected result for ActiveListBox (Wei)
 ENH: Ticket#503 - Localization and parameter tags can now appear as a substring in a property initial value (Qiang)
 ENH: Ticket#513 - Display last modified / revision in quickstart (Wei)
 ENH: Ticket#519 - Update TActiveRecord implementation (Wei)
+ENH: Ticket#430 - clearing the validator errors (Wei)
 ENH: Added PRADO_CHMOD constant so that users can specify the permission of PRADO-created directories (Qiang)
 ENH: Added Display property to TWebControl (Wei)
 ENH: Added TUser.getState() and setState() for storing user session data (Qiang)
